add initial UART support

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -17,4 +17,4 @@
 
 idf_component_register(SRCS "esp32-stromzaehler.cpp"
                     INCLUDE_DIRS "."
-                    REQUIRES wifi)
+                    REQUIRES wifi uart-communication)
