--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-# ESP32-Stromzaehler
+# ESP32-SmartMeter
 # Copyright (C) 2022 Christian Heusel
 #
 # This program is free software: you can redistribute it and/or modify
@@ -15,6 +15,6 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 
-idf_component_register(SRCS "esp32-stromzaehler.cpp"
+idf_component_register(SRCS "esp32-smartMeter.cpp"
                        INCLUDE_DIRS "."
                        REQUIRES wifi-connection mqtt-connection uart-communication)
