--- a/components/uart-communication/CMakeLists.txt
+++ b/components/uart-communication/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "uart-communication.cc"
                        INCLUDE_DIRS "include"
-                       REQUIRES driver)
+                       REQUIRES driver sml-parser)
