send the sml messages via MQTT

--- a/components/sml-parser/CMakeLists.txt
+++ b/components/sml-parser/CMakeLists.txt
@@ -1,2 +1,4 @@
 idf_component_register(SRCS "sml-parser.cc" "vendor/sml_parser/src/sml.cpp"
-                       INCLUDE_DIRS "include" "vendor/sml_parser/src/")
+                       INCLUDE_DIRS "include" "vendor/sml_parser/src/"
+                       REQUIRES mqtt-connection
+                       )
